--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,19 @@
-/* 
-    General Styles
-*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
+#Contacto{
+    border-style:  outset;
+    padding: 20px;
+    
+}
+
+
+#imagenContacto{
+    border-radius: 50%;
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
+}
