Realizado editar contactos y eliminar contactos+ algunos estilos + footer -- falta añadir un modal y spinner de carga

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,3 +22,11 @@ body{
     height: 160px;
     object-fit: cover;
 }
+.iconos{
+    display:flex;
+
+}
+
+#footer{
+    background-color: black;
+}
